2007-08-20  Michael Mutchinson <m.j.hutchinson@gmail.com>
	* configure.in: Re-version library to 1.90.3 to match unmanaged 
	  library, as we are now tracking the 2.x beta series.
	  
	* gtksourceview/SourceStyleScheme.custom,  
	  gtksourceview/gtksourceview-api.raw,
	  gtksourceview/SourceBuffer.custom,
	  gtksourceview/Gtk.metadata,
	  gtksourceview/GtkSourceView.cs,
	  gtksourceview/SourceLanguageManager.custom,
	  gtksourceview/Global.custom,
	  gtksourceview/Makefile.am,
	  gtksourceview/SourceLanguage.custom,
	  gtksourceview/SourceTagTable.custom: Update API and custom 
	  files for new 2.x series of unmanaged library.
	  
	* gtksourceview2-sharp.pc.in,
	  doc/gtksourceview2-sharp-docs.source,
	  gtksourceview2-sharp-sources.xml,
	  gtksourceview/gtksourceview2-sharp.dll.config.in: Renamed from 1.0 
	  version and updated.
	  
	* Makefile.am, doc/Makefile.am, sample/Makefile.am, sources/makefile:
	  Fix up the build system for filename and version changes.
	  
	* .cvsignore, sources/.cvsignore, gtksourceview/.cvsignore,
	  doc/.cvsignore: Remove irrelevant files.
	  
	* sample/SourceViewTest.cs: Update to 2.0 language APIs.
	
	* sample/PrintSample.cs: Removed; printing API has gone.
	
	Update svn:ignores on all directories.


svn path=/trunk/gtksourceview2-sharp/; revision=84507

--- a/gtksourceview/Makefile.am
+++ b/gtksourceview/Makefile.am
@@ -1,4 +1,4 @@
-LIBRARY_NAME=	gtksourceview-sharp
+LIBRARY_NAME=	gtksourceview2-sharp
 LIBRARY=	$(LIBRARY_NAME).dll
 APIS=		gtksourceview-api.xml
 
@@ -8,7 +8,7 @@ EXTRA_DIST = $(sources) $(customs) Gtk.metadata gtksourceview-api.raw AssemblyIn
 
 DISTCLEANFILES = AssemblyInfo.cs
 
-noinst_DATA = gtksourceview-sharp.dll
+noinst_DATA = gtksourceview2-sharp.dll
 
 apidir = $(gtksharp_prefix)/share/gapi-2.0
 api_DATA = gtksourceview-api.xml
@@ -22,7 +22,7 @@ gtksourceview-api.xml:
 
 generated-stamp: $(APIS) $(customs) $(sources) Gtk.metadata
 	$(GAPI_CODEGEN) $(GTK_SHARP_CFLAGS) --generate $(APIS) \
-	--outdir=generated --customdir=. --assembly-name=gtksourceview-sharp && touch generated-stamp
+	--outdir=generated --customdir=. --assembly-name=gtksourceview2-sharp && touch generated-stamp
 
 sources = \
 GtkSourceView.cs
@@ -33,7 +33,7 @@ customs = \
 Global.custom \
 SourceBuffer.custom \
 SourceLanguage.custom \
-SourceLanguagesManager.custom \
+SourceLanguageManager.custom \
 SourceStyleScheme.custom \
 SourceTagTable.custom
 
