--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -1,14 +1,10 @@
 TEST = SourceViewTest.exe
-PRINT = PrintSample.exe
 
-EXTRA_DIST = SourceViewTest.cs PrintSample.cs
-CLEANFILES = $(TEST) $(TEST).mdb $(PRINT) $(PRINT).mdb
+EXTRA_DIST = SourceViewTest.cs
+CLEANFILES = $(TEST) $(TEST).mdb
 
-all: $(TEST) $(PRINT)
+all: $(TEST)
 
 $(TEST): $(srcdir)/SourceViewTest.cs
-	$(CSC) -out:$@ $(srcdir)/SourceViewTest.cs -r:../gtksourceview/gtksourceview-sharp.dll -pkg:gtk-sharp-2.0
-
-$(PRINT): $(srcdir)/PrintSample.cs
-	$(CSC) -out:$@ $(srcdir)/PrintSample.cs -r:../gtksourceview/gtksourceview-sharp.dll -pkg:gtk-sharp-2.0 -pkg:gnome-sharp-2.0
+	$(CSC) -out:$@ $(srcdir)/SourceViewTest.cs -r:$(top_builddir)/gtksourceview/gtksourceview2-sharp.dll -pkg:gtk-sharp-2.0
 
