--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(gtksourceview-sharp-2.0, 0.11)
+AM_INIT_AUTOMAKE(gtksourceview2-sharp, 1.90.3)
 AM_MAINTAINER_MODE
 
 dnl Defines CC to avoid warnings
@@ -54,7 +54,7 @@ if test "x$GACUTIL" = "xno" ; then
 	AC_MSG_ERROR([No gacutil tool found])
 fi
 
-GACUTIL_FLAGS='/package gtksourceview-sharp-2.0 /root $(DESTDIR)$(prefix)/lib'
+GACUTIL_FLAGS='/package gtksourceview2-sharp /root $(DESTDIR)$(prefix)/lib'
                                      
 AC_SUBST(RUNTIME)
 AC_SUBST(CSC)
@@ -69,9 +69,9 @@ AC_SUBST(GTK_SHARP_LIBS)
 gtksharp_prefix=`pkg-config --variable=prefix gtk-sharp-2.0`
 AC_SUBST(gtksharp_prefix)
 
-PKG_CHECK_MODULES(GTKSOURCEVIEW, gtksourceview-1.0 >= 1.0.0)
+PKG_CHECK_MODULES(GTKSOURCEVIEW, gtksourceview-2.0 >= 1.90.3)
 AC_SUBST(GTKSOURCEVIEW_LIBS)
-gtksourceview_prefix=`pkg-config --variable=prefix gtksourceview-1.0`
+gtksourceview_prefix=`pkg-config --variable=prefix gtksourceview-2.0`
 AC_SUBST(gtksourceview_prefix)
 
 AC_PATH_PROG(GAPI_FIXUP, gapi2-fixup, no)
@@ -110,7 +110,7 @@ fi
 AC_SUBST(MDASSEMBLER)
 AC_SUBST(MONODOCER)
                                                                                 
-API_VERSION="1.0.0.2"
+API_VERSION="1.90.3"
 AC_SUBST(API_VERSION)
 
 AM_CONDITIONAL(ENABLE_MONODOC, test "x$enable_monodoc" = "xyes")
@@ -118,9 +118,9 @@ AM_CONDITIONAL(ENABLE_MONODOC, test "x$enable_monodoc" = "xyes")
 AC_OUTPUT([
 Makefile
 gtksourceview/AssemblyInfo.cs
-gtksourceview/gtksourceview-sharp.dll.config
+gtksourceview/gtksourceview2-sharp.dll.config
 gtksourceview/Makefile
-gtksourceview-sharp-2.0.pc
+gtksourceview2-sharp.pc
 doc/Makefile
 sample/Makefile
 ])
