--- a/gtksourceview2-sharp.pc.in
+++ b/gtksourceview2-sharp.pc.in
@@ -7,4 +7,4 @@ Name: GtkSourceView#
 Description: GtkSourceView# - gtksourceview .NET Binding
 Version: @VERSION@
 Requires: gnome-sharp-2.0
-Libs: -r:${prefix}/lib/mono/gtksourceview-sharp-2.0/gtksourceview-sharp.dll
+Libs: -r:${prefix}/lib/mono/gtksourceview2-sharp/gtksourceview2-sharp.dll
