--- a/sources/makefile
+++ b/sources/makefile
@@ -1,6 +1,6 @@
 all:
-	gapi2-parser gtksourceview-sharp-sources.xml
+	gapi2-parser gtksourceview2-sharp-sources.xml
 
 get-source-code: 
-	wget http://ftp.gnome.org/pub/GNOME/desktop/2.6/2.6.0/sources/gtksourceview-1.0.0.tar.gz --output-document=- | tar -xz;
+	wget http://ftp.gnome.org/pub/gnome/sources/gtksourceview/1.90/gtksourceview-1.90.3.tar.gz --output-document=- | tar -xz;
 
