2007-08-28  Michael Hutchinson <m.j.hutchinson@gmail.com>
	* sources/makefile,
	  sources/gtksourceview2-sharp-sources.xml,
	  gtksourceview/gtksourceview2-api.raw,
	  configure.in: Updated GtkSourceView version to 1.90.4.
	  
	* sample/SourceViewTest.cs,
	  gtksourceview/Gtk.metadata: Updated to 1.90.4 API.
	  
	* gtksourceview/Makefile.am: Updated.
	
	* gtksourceview/SourceStyleScheme.custom,
	  gtksourceview/SourceLanguagesManager.custom,
	  gtksourceview/SourceLanguageManager.custom,
	  gtksourceview/SourceTagTable.custom,
	  gtksourceview/Global.custom: Removed, not used in 1.90.4.


svn path=/trunk/gtksourceview2-sharp/; revision=84962

--- a/gtksourceview/Makefile.am
+++ b/gtksourceview/Makefile.am
@@ -2,7 +2,7 @@ LIBRARY_NAME=	gtksourceview2-sharp
 LIBRARY=	$(LIBRARY_NAME).dll
 APIS=		gtksourceview2-api.xml
 
-ASSEMBLIES=	/pkg:gnome-sharp-2.0
+ASSEMBLIES=	/pkg:gnome-sharp-2.0 /r:Mono.Posix
 
 EXTRA_DIST = $(sources) $(customs) Gtk.metadata gtksourceview2-api.raw AssemblyInfo.cs.in
 
@@ -30,12 +30,8 @@ GtkSourceView.cs
 build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
 
 customs = \
-Global.custom \
 SourceBuffer.custom \
-SourceLanguage.custom \
-SourceLanguageManager.custom \
-SourceStyleScheme.custom \
-SourceTagTable.custom
+SourceLanguage.custom
 
 build_customs = $(addprefix $(srcdir)/, $(customs))
 
