2007-09-11  Michael Hutchinson <mhutchinson@novell.com>
	* sources/makefile,
	  sources/gtksourceview2-sharp-sources.xml,
	  gtksourceview/gtksourceview2-api.raw,
	  configure.in: Updated GtkSourceView version to 1.90.5.
	  
	* gtksourceview/SourceBuffer.custom,
	  gtksourceview/Gtk.metadata: Updated to 1.90.5 API changes.

	* sample/Makefile.am: Copy the lib into this directory for 
	  convenience.


svn path=/trunk/gtksourceview2-sharp/; revision=85627

--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -1,10 +1,15 @@
 TEST = SourceViewTest.exe
-
-EXTRA_DIST = SourceViewTest.cs
-CLEANFILES = $(TEST) $(TEST).mdb
+GSVLIB=gtksourceview2-sharp.dll
+GSVLIBPATH=$(top_builddir)/gtksourceview/$(GSVLIB)
 
 all: $(TEST)
 
-$(TEST): $(srcdir)/SourceViewTest.cs
-	$(CSC) -out:$@ $(srcdir)/SourceViewTest.cs -r:$(top_builddir)/gtksourceview/gtksourceview2-sharp.dll -pkg:gtk-sharp-2.0
+$(TEST): $(srcdir)/SourceViewTest.cs $(GSVLIB)
+	$(CSC) -debug -out:$@ $(srcdir)/SourceViewTest.cs -r:$(GSVLIB) -pkg:gtk-sharp-2.0
 
+$(GSVLIB): $(GSVLIBPATH)
+	cp $(GSVLIBPATH) .
+	cp $(GSVLIBPATH).config .
+
+CLEANFILES = $(TEST) $(TEST).mdb $(GSVLIB)*
+EXTRA_DIST = SourceViewTest.cs
