--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 AC_INIT(README)
 AC_CANONICAL_SYSTEM
-AM_INIT_AUTOMAKE(gtksourceview2-sharp, 1.90.4)
+AM_INIT_AUTOMAKE(gtksourceview2-sharp, 1.90.5)
 AM_MAINTAINER_MODE
 
 dnl Defines CC to avoid warnings
@@ -63,13 +63,13 @@ AC_SUBST(GACUTIL_FLAGS)
 AC_SUBST(LIB_PREFIX)
 AC_SUBST(LIB_SUFFIX)
 
-PKG_CHECK_MODULES(GTK_SHARP, gnome-sharp-2.0 >= 1.9.3)
+PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp-2.0 >= 2.4.0)
 AC_SUBST(GTK_SHARP_CFLAGS)
 AC_SUBST(GTK_SHARP_LIBS)
 gtksharp_prefix=`pkg-config --variable=prefix gtk-sharp-2.0`
 AC_SUBST(gtksharp_prefix)
 
-PKG_CHECK_MODULES(GTKSOURCEVIEW, gtksourceview-2.0 >= 1.90.4)
+PKG_CHECK_MODULES(GTKSOURCEVIEW, gtksourceview-2.0 >= 1.90.5)
 AC_SUBST(GTKSOURCEVIEW_LIBS)
 gtksourceview_prefix=`pkg-config --variable=prefix gtksourceview-2.0`
 AC_SUBST(gtksourceview_prefix)
@@ -110,7 +110,7 @@ fi
 AC_SUBST(MDASSEMBLER)
 AC_SUBST(MONODOCER)
                                                                                 
-API_VERSION="1.90.4"
+API_VERSION="1.90.5"
 AC_SUBST(API_VERSION)
 
 AM_CONDITIONAL(ENABLE_MONODOC, test "x$enable_monodoc" = "xyes")
