2007-11-02  Michael Hutchinson  <mhutchinson@novell.com>
	* sample/Makefile.am: Fix dist.
	
	* configure.in: Knock versioning down to 1.9.x until we're ready to 
	  make a proper release.
	  
	* Makefile.am:
	* vbnet.lang:
	* nemerle.lang: Remove .lang files, as they're distributed with GTKSV2.
	  
	* gtksourceview/gtksourceview2-sharp.dll.config.in: DllMap to 
	  gtksourceview-2.0 library rather than gtksourceview-1.0.


svn path=/trunk/gtksourceview2-sharp/; revision=88727

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,7 @@
 
 SUBDIRS=		gtksourceview sample doc 
 DISTCLEANFILES =	gtksourceview2-sharp.pc
-EXTRA_DIST=		nemerle.lang vbnet.lang gtksourceview2-sharp.pc.in gtk-sharp.snk
-
-extra_langdir= $(gtksourceview_prefix)/share/gtksourceview-2.0/language-specs
-extra_lang_DATA=	nemerle.lang vbnet.lang
+EXTRA_DIST=		gtksourceview2-sharp.pc.in gtk-sharp.snk
 
 pkgconfigdir = $(prefix)/lib/pkgconfig
 pkgconfig_DATA = gtksourceview2-sharp.pc
