--- a/sample/Makefile.am
+++ b/sample/Makefile.am
@@ -1,15 +1,16 @@
-TEST = SourceViewTest.exe
-GSVLIB=gtksourceview2-sharp.dll
-GSVLIBPATH=$(top_builddir)/gtksourceview/$(GSVLIB)
+TEST=$(builddir)/SourceViewTest.exe
+
+GSVLIB=$(builddir)/gtksourceview2-sharp.dll
+GSVLIBBUILT=$(top_builddir)/gtksourceview/gtksourceview2-sharp.dll
 
 all: $(TEST)
 
 $(TEST): $(srcdir)/SourceViewTest.cs $(GSVLIB)
 	$(CSC) -debug -out:$@ $(srcdir)/SourceViewTest.cs -r:$(GSVLIB) -pkg:gtk-sharp-2.0
 
-$(GSVLIB): $(GSVLIBPATH)
-	cp $(GSVLIBPATH) .
-	cp $(GSVLIBPATH).config .
+$(GSVLIB): $(GSVLIBBUILT)
+	cp $(GSVLIBBUILT) $(builddir)
+	cp $(GSVLIBBUILT).config $(builddir)
 
 CLEANFILES = $(TEST) $(TEST).mdb $(GSVLIB)*
 EXTRA_DIST = SourceViewTest.cs
