--- a/gtksourceview2-sharp.pc.in
+++ b/gtksourceview2-sharp.pc.in
@@ -6,5 +6,5 @@ libdir=@libdir@
 Name: GtkSourceView#
 Description: GtkSourceView# - gtksourceview .NET Binding
 Version: @VERSION@
-Requires: gnome-sharp-2.0
+Requires: gtk-sharp-2.0
 Libs: -r:${prefix}/lib/mono/gtksourceview2-sharp/gtksourceview2-sharp.dll
