2007-11-16  Michael Hutchinson  <mhutchinson@novell.com>
	* sample/SourceViewTest.cs: List search paths in help message.
	
	* gtksourceview/SourceLanguageManager.custom: Fixed some custom 
	  marshalling thanks to ki9a on #monodevelop.
	
	* gtksourceview/SourceStyleSchemeManager.custom: 
	* gtksourceview/Gtk.metadata:
	* gtksourceview/Makefile.am: Add more custom marshalling.


svn path=/trunk/gtksourceview2-sharp/; revision=89788

--- a/gtksourceview/Makefile.am
+++ b/gtksourceview/Makefile.am
@@ -30,8 +30,10 @@ GtkSourceView.cs
 build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
 
 customs = \
-SourceBuffer.custom \
-SourceLanguage.custom
+	SourceBuffer.custom \
+	SourceLanguage.custom \
+	SourceLanguageManager.custom \
+	SourceStyleSchemeManager.custom
 
 build_customs = $(addprefix $(srcdir)/, $(customs))
 
